docs/user-guides/6.x/file-manager/essentials/upload-file.mdx
---
id: 2f7200c2
title: File Upload
description: Learn how to upload a file in File Manager.
---

import { Alert } from "@/components/Alert";
import uploadFileExplorerVideo from "./assets/upload-file/upload-file-file-explorer.mp4";
import uploadFileDragDropVideo from "./assets/upload-file/upload-file-drag-and-drop.mp4";
import uploadMultipleFilesVideo from "./assets/upload-file/upload-multiple-files.mp4";



<Alert type="success" title="WHAT YOU'LL LEARN">

- how to upload a file or multiple files

</Alert>

Webiny allows you to effortlessly upload files into the **File Manager** that you can use across your application. In this tutorial, we will learn how to upload a file or multiple files into the **File Manager**. As an example, we will upload the image shown below. Please save it on your computer to upload later.

![Industrial Analytics](./assets/upload-file/upload-image-example.png)

There are two ways to upload a file in **File Manager**; let's look at each approach one by one.

## Approach 1: Through file explorer

<Video src={uploadFileExplorerVideo} controls={true}/>

1. From the **Side Menu**, click **File Manager**.

    ✔️ The **File Manager Home** screen opens.

2. Click **UPLOAD**.

    ✔️ The file explorer screen opens.

3. From the file explorer, upload the image.

    ✔️ The file is uploaded. A pop-up confirmation message "File upload complete" at the bottom of the page.

4. Click on the **EDIT** button to adjust the **Name** and the other metadata of the record, e.g. you can add Tags to optimize organization and searching for assets.

    ✔️ The data about the file is updated.


## Approach 2: Drag and drop

<Video src={uploadFileDragDropVideo} controls={true}/>

1. From the **Side Menu**, click **File Manager**.

    ✔️ The **File Manager Home** screen opens.

2. Drag and drop the image from your computer's file explorer to the **Home** screen.

    ✔️ A pop-up confirmation message "File upload complete" at the bottom of the page.


## Upload multiple files

<Video src={uploadMultipleFilesVideo} controls={true}/>

1. From the **Side Menu**, click **File Manager**.

    ✔️ The **File Manager Home** screen opens.

2. Click **UPLOAD**.

    ✔️ The file explorer screen opens.

3. From the file explorer, select and upload the files.

    ✔️ The assets may take some time to be uploaded. The progress bar will inform the user of the percentage completion. Even if the user navigates away from the page the upload completes in the background and the pop-up confirmation message "File upload complete" shows up at the bottom of the page.